--- a/jenkins-blood.planx-pla.net/manifest.json
+++ b/jenkins-blood.planx-pla.net/manifest.json
@@ -298,7 +298,7 @@
   "guppy": {
     "indices": [
       {
-        "index": "jenkins_subject_new_alias",
+        "index": "jenkins_subject_alias",
         "type": "subject"
       },
       {
