--- a/jenkins-brain.planx-pla.net/manifest.json
+++ b/jenkins-brain.planx-pla.net/manifest.json
@@ -295,7 +295,7 @@
   "guppy": {
     "indices": [
       {
-        "index": "jenkins_subject_new_alias",
+        "index": "jenkins_subject_alias",
         "type": "subject"
       },
       {
