--- a/jenkins-niaid.planx-pla.net/manifest.json
+++ b/jenkins-niaid.planx-pla.net/manifest.json
@@ -301,7 +301,7 @@
   "guppy": {
     "indices": [
       {
-        "index": "jenkins_subject_new_alias",
+        "index": "jenkins_subject_alias",
         "type": "subject"
       },
       {
