Update ROOT_NODE for pfbexport

--- a/jenkins-blood.planx-pla.net/manifest.json
+++ b/jenkins-blood.planx-pla.net/manifest.json
@@ -216,7 +216,7 @@
           },
           {
             "name": "ROOT_NODE",
-            "value": "study"
+            "value": "subject"
           }
         ],
         "volumeMounts": [
