--- a/qa-heal.planx-pla.net/manifest.json
+++ b/qa-heal.planx-pla.net/manifest.json
@@ -113,5 +113,8 @@
       ],
       "restart_policy": "Never"
     }
-  ]
+  ],
+  "argo": {
+    "argo_server_service_url": "http://argo-argo-workflows-server.argo.svc.cluster.local:2746"
+  }
 }
