--- a/jenkins-perf.planx-pla.net/manifest.json
+++ b/jenkins-perf.planx-pla.net/manifest.json
@@ -7,21 +7,21 @@
     "autodeploy": "yes"
   },
   "versions": {
-    "arborist": "quay.io/cdis/arborist:integration202409",
+    "arborist": "quay.io/cdis/arborist:2024.09",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:v1.3.1",
-    "fence": "quay.io/cdis/fence:integration202409",
+    "fence": "quay.io/cdis/fence:2024.09",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
-    "indexd": "quay.io/cdis/indexd:integration202409",
-    "peregrine": "quay.io/cdis/peregrine:integration202409",
-    "portal": "quay.io/cdis/data-portal:integration202409",
-    "revproxy": "quay.io/cdis/nginx:integration202409",
-    "sheepdog": "quay.io/cdis/sheepdog:integration202409",
-    "manifestservice": "quay.io/cdis/manifestservice:integration202409",
-    "wts": "quay.io/cdis/workspace-token-service:integration202409",
-    "sower": "quay.io/cdis/sower:integration202409",
-    "hatchery": "quay.io/cdis/hatchery:integration202409",
-    "metadata": "quay.io/cdis/metadata-service:integration202409",
-    "dashboard": "quay.io/cdis/gen3-statics:integration202409"
+    "indexd": "quay.io/cdis/indexd:2024.09",
+    "peregrine": "quay.io/cdis/peregrine:2024.09",
+    "portal": "quay.io/cdis/data-portal:2024.09",
+    "revproxy": "quay.io/cdis/nginx:2024.09",
+    "sheepdog": "quay.io/cdis/sheepdog:2024.09",
+    "manifestservice": "quay.io/cdis/manifestservice:2024.09",
+    "wts": "quay.io/cdis/workspace-token-service:2024.09",
+    "sower": "quay.io/cdis/sower:2024.09",
+    "hatchery": "quay.io/cdis/hatchery:2024.09",
+    "metadata": "quay.io/cdis/metadata-service:2024.09",
+    "dashboard": "quay.io/cdis/gen3-statics:2024.09"
   },
   "arborist": {
     "deployment_version": "2"
@@ -45,7 +45,7 @@
       "name": "pelican-export",
       "container": {
         "name": "job-task",
-        "image": "quay.io/cdis/pelican:integration202409",
+        "image": "quay.io/cdis/pelican:2024.09",
         "pull_policy": "always",
         "env": []
       },
