--- a/jenkins-new-3.planx-pla.net/manifest.json
+++ b/jenkins-new-3.planx-pla.net/manifest.json
@@ -31,10 +31,8 @@
     "metadata": "quay.io/cdis/metadata-service:master",
     "dashboard": "quay.io/cdis/gen3-statics:master",
     "requestor": "quay.io/cdis/requestor:master",
-    "argo-wrapper": "quay.io/cdis/argo-wrapper:master",
     "cedar-wrapper": "quay.io/cdis/cedar-wrapper-service:master",
-    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:master",
-    "cohort-middleware": "quay.io/cdis/cohort-middleware:master"
+    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:master"
   },
   "arborist": {
     "deployment_version": "2"
@@ -355,8 +353,5 @@
     "guppy": {
       "strategy": "auto"
     }
-  },
-  "argo": {
-    "argo_server_service_url": "http://argo-argo-workflows-server.argo.svc.cluster.local:2746"
   }
 }
