--- a/jenkins-niaid.planx-pla.net/manifest.json
+++ b/jenkins-niaid.planx-pla.net/manifest.json
@@ -31,9 +31,7 @@
     "metadata": "quay.io/cdis/metadata-service:master",
     "requestor": "quay.io/cdis/requestor:master",
     "cedar-wrapper": "quay.io/cdis/cedar-wrapper-service:master",
-    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:master",    
-    "argo-wrapper": "quay.io/cdis/argo-wrapper:master",
-    "cohort-middleware": "quay.io/cdis/cohort-middleware:master"
+    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:master"
   },
   "portal": {
     "GEN3_BUNDLE": "nct"
@@ -361,8 +359,5 @@
     "guppy": {
       "strategy": "auto"
     }
-  },
-  "argo": {
-    "argo_server_service_url": "http://argo-argo-workflows-server.argo.svc.cluster.local:2746"
   }
 }
