--- a/qa-bih.planx-pla.net/manifest.json
+++ b/qa-bih.planx-pla.net/manifest.json
@@ -11,14 +11,16 @@
     "aws-es-proxy": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/aws-es-proxy:v1.3.1",
     "fence": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/fence:2024.05",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
-    "indexd": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/indexd:2024.05",
+    "frontend-framework": "quay.io/cdis/bih-data-commons:main",
     "guppy": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/guppy:2024.05",
+    "hatchery": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/hatchery:2024.05",
+    "indexd": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/indexd:2024.05",
     "metadata": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/metadata-service:2024.05",
     "peregrine": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/peregrine:2024.05",
     "portal": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/data-portal:2024.05",
+    "spark": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/gen3-spark:2024.05",
     "revproxy": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/nginx:2024.05",
     "sheepdog": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/sheepdog:2024.05",
-    "frontend-framework": "quay.io/cdis/bih-data-commons:main",
     "wts": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/workspace-token-service:2024.05"
   },
   "arborist": {
@@ -51,18 +53,15 @@
   "guppy": {
     "indices": [
       {
-        "index": "default-commons-index",
-        "type": "metadata"
+        "index": "bih_imaging_series",
+        "type": "imaging_series"
       }
     ],
-   "config_index": "default-commons-config-index"
+   "config_index": "bih_array-config"
   },
   "metadata": {
     "USE_AGG_MDS": true,
     "AGG_MDS_NAMESPACE": "qa-midrc-bih"
-  },
-  "portal": {
-    "GEN3_BUNDLE": "ecosystem"
   },
   "canary": {
     "default": 0
