--- a/qa-dcp.planx-pla.net/etlMapping.yaml
+++ b/qa-dcp.planx-pla.net/etlMapping.yaml
@@ -124,11 +124,40 @@ mappings:
           - name: file_count
             src: _file_id
             fn: count
-  - name: qa-dcp_file
-    doc_type: file
+  - name: qa-dcp_data_file
+    doc_type: data_file
     type: collector
     root: None
     category: data_file
+    props:
+      - name: object_id
+      - name: md5sum
+      - name: file_name
+      - name: file_size
+      - name: data_category
+      - name: data_format
+      - name: data_type
+      - name: state
+      - name: callset
+      - name: bucket_path
+      - name: source_node
+    injecting_props:
+      subject:
+        props:
+          - name: _subject_id
+            src: id
+            fn: set
+          - name: project_id
+      program:
+        props:
+          - name: programs_name
+            src: name
+            fn: set
+  - name: qa-dcp_index_file
+    doc_type: index_file
+    type: collector
+    root: None
+    category: index_file
     props:
       - name: object_id
       - name: md5sum
