--- a/qa-dcp.planx-pla.net/etlMapping.yaml
+++ b/qa-dcp.planx-pla.net/etlMapping.yaml
@@ -112,7 +112,7 @@ mappings:
       - path: studies[studies_submitter_id:submitter_id].projects[code]
       - path: studies[studies_submitter_id:submitter_id].projects[code].programs[programs_name:name]
     joining_props:
-      - index: file
+      - index: data_file
         join_on: _subject_id
         props:
           - name: data_format
@@ -121,8 +121,20 @@ mappings:
           - name: data_type
             src: data_type
             fn: set
-          - name: file_count
-            src: _file_id
+          - name: data_file_count
+            src: _data_file_id
+            fn: count
+      - index: index_file
+        join_on: _subject_id
+        props:
+          - name: data_format
+            src: data_format
+            fn: set
+          - name: data_type
+            src: data_type
+            fn: set
+          - name: index_file_count
+            src: _index_file_id
             fn: count
   - name: qa-dcp_data_file
     doc_type: data_file
@@ -166,6 +178,7 @@ mappings:
       - name: data_category
       - name: data_format
       - name: data_type
+      - name: state
       - name: callset
       - name: bucket_path
       - name: source_node
