--- a/jenkins-new-2.planx-pla.net/manifest.json
+++ b/jenkins-new-2.planx-pla.net/manifest.json
@@ -28,7 +28,7 @@
     "guppy": "quay.io/cdis/guppy:master",
     "sower": "quay.io/cdis/sower:master",
     "hatchery": "quay.io/cdis/hatchery:fix_ecs_ct_length",
-    "metadata": "quay.io/cdis/metadata-service:2024.10",
+    "metadata": "quay.io/cdis/metadata-service:integration202411",
     "dashboard": "quay.io/cdis/gen3-statics:master",
     "requestor": "quay.io/cdis/requestor:master",
     "cedar-wrapper": "quay.io/cdis/cedar-wrapper-service:master",
